--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "target": "ES6",
     "rootDir": "src",
-    "outDir": "lib",
+    "outDir": "dist",
     "module": "commonjs",
     "noImplicitAny": true,
     "removeComments": false,
